[BATCH-383] Fixes to make Spring Batch 1.4 runtime compliant.