@@ -85,7 +85,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 				String text = (String) jmsTemplate.receiveAndConvert("queue");
 				list.add(text);
 				jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-						Integer.valueOf(list.size()), text });
+				        new Integer(list.size()), text });
 				return new ExitStatus(text != null);
 			}
 		});
@@ -116,7 +116,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 				String text = (String) jmsTemplate.receiveAndConvert("queue");
 				list.add(text);
 				jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-						Integer.valueOf(list.size()), text });
+				        new Integer(list.size()), text });
 				return new ExitStatus(text != null);
 			}
 		});
@@ -146,7 +146,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 		// The JmsTemplate is used elsewhere outside a transaction, so
 		// we need to use one here that is transaction aware.
 		final JmsTemplate jmsTemplate = new JmsTemplate((ConnectionFactory) applicationContext
-				.getBean("txAwareConnectionFactory"));
+		        .getBean("txAwareConnectionFactory"));
 		jmsTemplate.setReceiveTimeout(100L);
 		jmsTemplate.setSessionTransacted(true);
 
@@ -156,7 +156,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 				String text = (String) jmsTemplate.receiveAndConvert("queue");
 				list.add(text);
 				jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-						Integer.valueOf(list.size()), text });
+				        new Integer(list.size()), text });
 				return new ExitStatus(text != null);
 			}
 		});
@@ -170,11 +170,9 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 						try {
 							assertTrue("Not a SessionProxy - wrong spring version?", session instanceof SessionProxy);
 							((SessionProxy) session).getTargetSession().rollback();
-						}
-						catch (JMSException e) {
+						} catch (JMSException e) {
 							throw e;
-						}
-						catch (Exception e) {
+						} catch (Exception e) {
 							// swallow it
 							e.printStackTrace();
 						}
