@@ -73,8 +73,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 	List list = new ArrayList();
 
 	/**
-	 * Message processing is successful on the second attempt without having to
-	 * receive the message again.
+	 * Message processing is successful on the second attempt without having to receive the message again.
 	 * 
 	 * @throws Exception
 	 */
@@ -83,11 +82,9 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 		assertInitialState();
 
 		/*
-		 * We either want the JMS receive to be outside a transaction, or we
-		 * need the database transaction in the retry to be PROPAGATION_NESTED.
-		 * Otherwise JMS will roll back when the retry callback is eventually
-		 * successful because of the previous exception.
-		 * PROPAGATION_REQUIRES_NEW is wrong because it doesn't allow the outer
+		 * We either want the JMS receive to be outside a transaction, or we need the database transaction in the retry
+		 * to be PROPAGATION_NESTED. Otherwise JMS will roll back when the retry callback is eventually successful
+		 * because of the previous exception. PROPAGATION_REQUIRES_NEW is wrong because it doesn't allow the outer
 		 * transaction to fail and rollback the inner one.
 		 */
 		final String text = (String) jmsTemplate.receiveAndConvert("queue");
@@ -104,7 +101,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 						list.add(text);
 						System.err.println("Inserting: [" + list.size() + "," + text + "]");
 						jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-								Integer.valueOf(list.size()), text });
+						        new Integer(list.size()), text });
 						if (list.size() == 1) {
 							throw new RuntimeException("Rollback!");
 						}
@@ -133,8 +130,8 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 	}
 
 	/**
-	 * Message processing is successful on the second attempt without having to
-	 * receive the message again - uses JmsItemProvider internally.
+	 * Message processing is successful on the second attempt without having to receive the message again - uses
+	 * JmsItemProvider internally.
 	 * 
 	 * @throws Exception
 	 */
@@ -158,7 +155,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 						list.add(text);
 						System.err.println("Inserting: [" + list.size() + "," + text + "]");
 						jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-								Integer.valueOf(list.size()), text });
+						        new Integer(list.size()), text });
 						if (list.size() == 1) {
 							throw new RuntimeException("Rollback!");
 						}
@@ -188,8 +185,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 	}
 
 	/**
-	 * Message processing is successful on the second attempt without having to
-	 * receive the message again.
+	 * Message processing is successful on the second attempt without having to receive the message again.
 	 * 
 	 * @throws Exception
 	 */
@@ -198,11 +194,9 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 		assertInitialState();
 
 		/*
-		 * We either want the JMS receive to be outside a transaction, or we
-		 * need the database transaction in the retry to be PROPAGATION_NESTED.
-		 * Otherwise JMS will roll back when the retry callback is eventually
-		 * successful because of the previous exception.
-		 * PROPAGATION_REQUIRES_NEW is wrong because it doesn't allow the outer
+		 * We either want the JMS receive to be outside a transaction, or we need the database transaction in the retry
+		 * to be PROPAGATION_NESTED. Otherwise JMS will roll back when the retry callback is eventually successful
+		 * because of the previous exception. PROPAGATION_REQUIRES_NEW is wrong because it doesn't allow the outer
 		 * transaction to fail and rollback the inner one.
 		 */
 		final String text = (String) jmsTemplate.receiveAndConvert("queue");
@@ -218,7 +212,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 						list.add(text);
 						System.err.println("Inserting: [" + list.size() + "," + text + "]");
 						jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-								Integer.valueOf(list.size()), text });
+						        new Integer(list.size()), text });
 						return text;
 
 					}
@@ -247,8 +241,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 	}
 
 	/**
-	 * Message processing is successful on the second attempt but must receive
-	 * the message again.
+	 * Message processing is successful on the second attempt but must receive the message again.
 	 * 
 	 * @throws Exception
 	 */
@@ -273,7 +266,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 						final String text = (String) jmsTemplate.receiveAndConvert("queue");
 						list.add(text);
 						jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)", new Object[] {
-								Integer.valueOf(list.size()), text });
+						        new Integer(list.size()), text });
 						if (list.size() == 1) {
 							throw new RuntimeException("Rollback!");
 						}
@@ -325,7 +318,7 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 							final String text = (String) jmsTemplate.receiveAndConvert("queue");
 							list.add(text);
 							jdbcTemplate.update("INSERT into T_FOOS (id,name,foo_date) values (?,?,null)",
-									new Object[] { Integer.valueOf(list.size()), text });
+							        new Object[] { new Integer(list.size()), text });
 							throw new RuntimeException("Rollback!");
 
 						}
@@ -335,13 +328,12 @@ public class SynchronousTests extends AbstractTransactionalDataSourceSpringConte
 			});
 
 			/*
-			 * N.B. the message can be re-directed to an error queue by setting
-			 * an error destination in a JmsItemProvider.
+			 * N.B. the message can be re-directed to an error queue by setting an error destination in a
+			 * JmsItemProvider.
 			 */
 			fail("Expected RuntimeException");
 
-		}
-		catch (RuntimeException e) {
+		} catch (RuntimeException e) {
 			assertEquals("Rollback!", e.getMessage());
 			// expected
 		}
